# university

./: README.md
assembler/lab2/: CMakeLists.txt  main.cpp
assembler/lab3/: CMakeLists.txt  main.cpp
assembler/lab4/: CMakeLists.txt  main.cpp
assembler/lab5/: CMakeLists.txt  main.cpp
crypto-alg-prog/wolibc/: README.md  build.sh  main.cpp  mywrite.S  start.S  types.h
implementation-analysis-of-information-security-algorithms/1/encrypt/: CMakeLists.txt  main.cpp
implementation-analysis-of-information-security-algorithms/1/kovalev-lab1/: decrypt.cpp  encrypt.cpp
implementation-analysis-of-information-security-algorithms/lab1/: test.py
implementation-analysis-of-information-security-algorithms/lab1/src/: CMakeLists.txt  convert_table.cpp  decrypt.cpp  encrypt.cpp  shared.cpp  shared.hpp
intrusion-detection-systems/attack-emulation/: CMakeLists.txt  attacker.cpp  defender.cpp  shared.cpp  shared.hpp
operating-systems/lab1/: task.txt
operating-systems/lab1/cpp/: CMakeLists.txt  main.cpp
operating-systems/lab1/shell/: lab1.sh
operating-systems/msg-exchange/: CMakeLists.txt  client.cpp  server.cpp  shared.cpp  shared.h
operating-systems/shmem-exchange/: CMakeLists.txt  client.cpp  server.cpp  shared.cpp  shared.h
operating-systems/socket-exchange/: CMakeLists.txt  client.cpp  server.cpp  shared.cpp  shared.h
operating-systems/task1/: CMakeLists.txt  main.c
operating-systems/task2/: CMakeLists.txt  main.c
parallel-computing/task1/: CMakeLists.txt  README.md  task1.1.cpp  task1.2.cpp  tools.hpp
parallel-computing/task1.1/: CMakeLists.txt  README.md  main.cpp
programming-languages/final-project-dlib/: README.md
programming-languages/final-project-dlib/src/: CMakeLists.txt  color_reducer.cpp  color_reducer.hpp  main.cpp
software-and-data-security/disassembler-test/: CMakeLists.txt  all.sh  build.sh  configure.sh  main.cpp
software-and-data-security/task1/: CMakeLists.txt  build.sh  configure.sh  main.cpp
